<resources>
    <string name="app_name">TTD DasaSahitya</string>
    <string name="hare_shrinivasa">॥ Hare Srinivasa ॥</string>
    <string name="hare_shrinivasa_kan">॥ ಹರೇ ಶ್ರೀನಿವಾಸ ॥</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ttd_dasa_sahitya">ಟಿ.ಟಿ.ಡಿ ದಾಸಸಾಹಿತ್ಯ</string>
    <string name="acharya_vani">ಆಚಾರ್ಯ ವಾಣಿ</string>
    <string name="udaya_vani">ಉದಯ ವಾಣಿ</string>
    <string name="pattha">ಪಾಠ</string>
    <string name="parayana">ಪಾರಾಯಣ</string>
    <string name="nitya_krma">ನಿತ್ಯ ಕರ್ಮ</string>
    <string name="naimittika_karma">ನೈಮಿತ್ತಿಕ ಕರ್ಮ</string>
    <string name="ttd_dasa_sahitya_eng">TTD Dasa Sahitya</string>
    <string name="acharya_vani_eng">Acharyavani</string>
    <string name="udaya_vani_eng">Udayavani</string>
    <string name="pattha_eng">Patha</string>
    <string name="parayana_eng">Parayana</string>
    <string name="nitya_karma_eng">Nitya Karma</string>
    <string name="naimittika_karma_eng">Naimittika Karma</string>
    <string name="calender_kan">ಕ್ಯಾಲೆಂಡರ್</string>
    <string name="pravachana_kan">ಪ್ರವಚನ</string>
    <string name="dasara_pada_kan">ದಾಸರಪದ</string>
    <string name="more_kan">ಇತರೆ</string>
    <string name="calender">Calendar</string>
    <string name="pravachana">Pravachana</string>
    <string name="dasara_pada">Dasarapada</string>
    <string name="more">More</string>
    <string name="takes_back_to_the_previous_page">takes back to the previous page</string>
    <string name="back_button_description">back button description</string>
    <string name="paatha_for_men_eng">Patha for men</string>
    <string name="paatha_for_women_eng">Patha for women</string>
    <string name="paatha_for_kids_eng">Patha for kids</string>
    <string name="paatha_for_men">ಗಂಡಸರಿಗೆ ಪಾಠ</string>
    <string name="paatha_for_women">ಹೆಂಗಸರಿಗೆ ಪಾಠ</string>
    <string name="paatha_for_kids">ಮಕ್ಕಳಿಗೆ ಪಾಠ</string>
    <string name="english_button">english button</string>
    <string name="pratah_smarana_eng">Pratah smarana</string>
    <string name="suprabhata_eng">Suprabhata</string>
    <string name="snana_eng">Snana</string>
    <string name="pooja_eng">Pooja</string>
    <string name="dhyana_eng">Dhyana</string>
    <string name="anusandhana_eng">Anusandhana</string>
    <string name="chintana_eng">Chintana</string>
    <string name="pratah_smarana">ಪ್ರಾತಃ ಸ್ಮರಣ</string>
    <string name="suprabhata">ಸುಪ್ರಭಾತ</string>
    <string name="snana">ಸ್ನಾನ</string>
    <string name="pooja">ಪೂಜಾ</string>
    <string name="dhyana">ಧ್ಯಾನ</string>
    <string name="anusandhana">ಅನುಸಂಧಾನ</string>
    <string name="chintana">ಚಿಂತನ</string>
    <string name="vratha_eng">Vratha</string>
    <string name="vratha">ವ್ರತ</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>
    <string name="website">Website</string>
    <string name="About">About</string>
    <string name="hare_srinivasa">Hare Srinivasa</string>
    <string name="guest_login">Guest Login</string>
    <string name="audio_file_name">Audio File Name</string>
    <string name="date">Date</string>
    <string name="event_name">Event Name</string>
    <string name="unknown_dasarapada">Unknown Dasarapada</string>
</resources>