<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_home">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h10per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v50per_patha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h52per_patha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <TextView
        android:id="@+id/ttd_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center_horizontal"
        android:text="TTD Dasa Sahitya"
        android:textColor="@color/text_home"
        android:textSize="@dimen/_15sdp"
        app:fontFamily="@font/poppins"
        app:layout_constraintBottom_toTopOf="@+id/h10per"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/back_button"
        android:contentDescription="@string/back_button_description"
        app:layout_constraintBottom_toTopOf="@+id/h10per"
        app:layout_constraintStart_toStartOf="@+id/ttd_header"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h85per_patha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_nk"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h10per">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/text_home">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cnv14per"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.14" />

            <ImageView
                android:id="@+id/iv_nk"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:background="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/guru"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cnv14per"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtpatha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="Patha"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                app:fontFamily="@font/poppins"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cnv14per"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_men_patha"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="120dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintBottom_toTopOf="@id/h52per_patha"
        app:layout_constraintEnd_toStartOf="@id/v50per_patha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_nk">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/paatha_for_men_eng"
            android:scaleType="centerCrop"
            android:src="@drawable/men" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtPaathaMen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/paatha_for_men_eng"
        android:textColor="@color/text_home"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/card_view_men_patha"
        app:layout_constraintStart_toStartOf="@+id/card_view_men_patha"
        app:layout_constraintTop_toBottomOf="@+id/card_view_men_patha" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_women_patha"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="13dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintBottom_toTopOf="@+id/h52per_patha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/v50per_patha"
        app:layout_constraintTop_toBottomOf="@+id/card_nk">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/women"
            android:contentDescription="@string/paatha_for_women_eng"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtPaathaWomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/paatha_for_women_eng"
        android:textColor="@color/text_home"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/card_view_women_patha"
        app:layout_constraintStart_toStartOf="@+id/card_view_women_patha"
        app:layout_constraintTop_toBottomOf="@+id/card_view_women_patha" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h85per_patha"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="@dimen/_10sdp"
            app:backgroundTint="@color/text_home"
            app:fabCradleMargin="@dimen/_5sdp"
            app:layout_anchorGravity="center_horizontal|center_vertical">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_10sdp"
                app:backgroundTint="@android:color/transparent"
                app:itemIconTint="@color/white"
                app:itemTextColor="#FFFFFF"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_nav_menu" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:backgroundTint="@color/text_home"
            app:borderWidth="@dimen/_8sdp"
            app:fabCustomSize="@dimen/_50sdp"
            app:layout_anchor="@id/bottomAppBar"
            app:srcCompat="@drawable/ic_home"
            app:tint="@android:color/white" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_kids_patha"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h52per_patha">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/kids"
            android:contentDescription="@string/paatha_for_kids_eng">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtPaathaKids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/paatha_for_kids_eng"
        android:textColor="@color/text_home"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/card_view_kids_patha"
        app:layout_constraintStart_toStartOf="@+id/card_view_kids_patha"
        app:layout_constraintTop_toBottomOf="@+id/card_view_kids_patha" />

    <ImageButton
        android:id="@+id/switchLanguage"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/english"
        android:contentDescription="@string/english_button"
        app:layout_constraintEnd_toEndOf="@id/ttd_header"
        app:layout_constraintBottom_toTopOf="@id/h10per" />


</androidx.constraintlayout.widget.ConstraintLayout>